tests/baselines/reference/strictModeCode2.errors.txt
tests/cases/compiler/strictModeCode2.ts(5,9): error TS1212: Identifier expected. 'public' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(6,9): error TS1212: Identifier expected. 'static' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(7,9): error TS1212: Identifier expected. 'let' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(8,9): error TS1212: Identifier expected. 'package' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(8,9): error TS2300: Duplicate identifier 'package'.
tests/cases/compiler/strictModeCode2.ts(9,14): error TS1212: Identifier expected. 'package' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(9,14): error TS2300: Duplicate identifier 'package'.
tests/cases/compiler/strictModeCode2.ts(10,18): error TS1212: Identifier expected. 'private' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(10,27): error TS1212: Identifier expected. 'implements' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(10,39): error TS1212: Identifier expected. 'let' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(11,18): error TS1212: Identifier expected. 'implements' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(11,30): error TS1212: Identifier expected. 'protected' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(12,24): error TS1212: Identifier expected. 'private' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(12,33): error TS1212: Identifier expected. 'public' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(12,41): error TS1212: Identifier expected. 'package' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(13,11): error TS1212: Identifier expected. 'private' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(13,20): error TS1212: Identifier expected. 'public' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(13,28): error TS1212: Identifier expected. 'package' is a reserved word in strict mode
tests/cases/compiler/strictModeCode2.ts(15,25): error TS9003: 'class' expressions are not currently supported.


==== tests/cases/compiler/strictModeCode2.ts (19 errors) ====
    let let = 10;
    
    function foo() {
        "use strict"
        var public = 10;
            ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode
        var static = "hi";
            ~~~~~~
!!! error TS1212: Identifier expected. 'static' is a reserved word in strict mode
        let let = "blah";
            ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode
        var package = "hello"
            ~~~~~~~
!!! error TS1212: Identifier expected. 'package' is a reserved word in strict mode
            ~~~~~~~
!!! error TS2300: Duplicate identifier 'package'.
        function package() { }
                 ~~~~~~~
!!! error TS1212: Identifier expected. 'package' is a reserved word in strict mode
                 ~~~~~~~
!!! error TS2300: Duplicate identifier 'package'.
        function bar(private, implements, let) { }
                     ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode
                              ~~~~~~~~~~
!!! error TS1212: Identifier expected. 'implements' is a reserved word in strict mode
                                          ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode
        function baz<implements, protected>() { }
                     ~~~~~~~~~~
!!! error TS1212: Identifier expected. 'implements' is a reserved word in strict mode
                                 ~~~~~~~~~
!!! error TS1212: Identifier expected. 'protected' is a reserved word in strict mode
        function barn(cb: (private, public, package) => void) { }
                           ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode
                                    ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode
                                            ~~~~~~~
!!! error TS1212: Identifier expected. 'package' is a reserved word in strict mode
        barn((private, public, package) => { });
              ~~~~~~~
!!! error TS1212: Identifier expected. 'private' is a reserved word in strict mode
                       ~~~~~~
!!! error TS1212: Identifier expected. 'public' is a reserved word in strict mode
                               ~~~~~~~
!!! error TS1212: Identifier expected. 'package' is a reserved word in strict mode
    
        var myClass = class package extends public {}
                            ~~~~~~~
!!! error TS9003: 'class' expressions are not currently supported.
    }
    
    